2002-10-01  Chris Blumenberg  <cblu@apple.com>

	Fixed build breakage.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView setWindow]):

2002-10-01  Ken Kocienda  <kocienda@apple.com>

        Implemented WebResourceRequest "category" design for extending a
        request with protocol-specific data.

        * WebCoreSupport.subproj/WebBridge.m: Now imports WebHTTPResourceRequest.h.
        * WebCoreSupport.subproj/WebSubresourceClient.m: Ditto.
        * WebView.subproj/WebMainResourceClient.m: Ditto.

2002-10-01  Chris Blumenberg  <cblu@apple.com>

	- Added debug drawing
	- removed unnecessary ifdef'ing.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView sendActivateEvent:]):
        (-[WebBaseNetscapePluginView becomeFirstResponder]):
        (-[WebBaseNetscapePluginView resignFirstResponder]):
        (-[WebBaseNetscapePluginView mouseDown:]):
        (-[WebBaseNetscapePluginView mouseUp:]):
        (-[WebBaseNetscapePluginView mouseEntered:]):
        (-[WebBaseNetscapePluginView mouseExited:]):
        (-[WebBaseNetscapePluginView menuForEvent:]):
        (-[WebBaseNetscapePluginView setWindow]):
        (-[WebBaseNetscapePluginView start]):
        (-[WebBaseNetscapePluginView drawRect:]):

2002-10-01  Ken Kocienda  <kocienda@apple.com>

        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient handleDidFinishLoading:]): Fixed Development build breakage. Call to [response statusCode] 
	now calls the handle's private method to get the status code.
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handleDidFinishLoading:]): Ditto.
        (-[WebMainResourceClient handle:didReceiveData:]): Calls new textEncodingName method, replacing call to characterSet.

2002-10-01  Ken Kocienda  <kocienda@apple.com>

        * WebView.subproj/WebLoadProgress.m: