@@ -22,6 +22,7 @@
 .objc_class_name_WebStandardPanels
 .objc_class_name_WebStringTruncator
 .objc_class_name_WebTestController
+.objc_class_name_WebTextRendererFactory
 .objc_class_name_WebURLsWithTitles
 .objc_class_name_WebView
 .objc_class_name_WebTextView
